[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/OnScreenControls.gd" type="Script" id=1]
[ext_resource path="res://Assets/Controls/down_arrow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Controls/left_arrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/Controls/up_arrow.png" type="Texture" id=4]
[ext_resource path="res://Assets/Controls/right_arrow.png" type="Texture" id=5]

[node name="OnScreenControlsAlt" type="Node2D"]
script = ExtResource( 1 )

[node name="UpButton" type="TouchScreenButton" parent="."]
position = Vector2( 0, -16 )
normal = ExtResource( 4 )
pressed = ExtResource( 4 )

[node name="DownButton" type="TouchScreenButton" parent="."]
position = Vector2( 0, 16 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )

[node name="LeftButton" type="TouchScreenButton" parent="."]
position = Vector2( -16, 0 )
normal = ExtResource( 3 )
pressed = ExtResource( 3 )

[node name="RightButton" type="TouchScreenButton" parent="."]
position = Vector2( 16, 0 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )
[connection signal="pressed" from="UpButton" to="." method="_on_UpButton_pressed"]
[connection signal="released" from="UpButton" to="." method="_on_UpButton_released"]
[connection signal="pressed" from="DownButton" to="." method="_on_DownButton_pressed"]
[connection signal="released" from="DownButton" to="." method="_on_DownButton_released"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="released" from="LeftButton" to="." method="_on_LeftButton_released"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="released" from="RightButton" to="." method="_on_RightButton_released"]
